[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/black_bg.png" type="Texture" id=1]
[ext_resource path="res://Menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://Assets/vibration_enabled.png" type="Texture" id=4]
[ext_resource path="res://Assets/music_enabled.png" type="Texture" id=5]
[ext_resource path="res://Assets/sound_enabled.png" type="Texture" id=6]
[ext_resource path="res://Assets/close.png" type="Texture" id=7]
[ext_resource path="res://Assets/sound_disabled.png" type="Texture" id=8]
[ext_resource path="res://Assets/vibration_disabled.png" type="Texture" id=9]
[ext_resource path="res://Assets/music_disabled.png" type="Texture" id=10]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 151.5, 321.1 )
scale = Vector2( 0.839674, 0.794307 )
texture = ExtResource( 1 )

[node name="Head" type="Label" parent="."]
margin_left = 53.0
margin_top = 30.0
margin_right = 253.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 2 )
text = "SETTINGS"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -117.0
margin_right = 10.0
margin_bottom = 207.0
rect_scale = Vector2( 0.8, 0.8 )
custom_constants/separation = -30

[node name="sound_btn" type="TextureButton" parent="Buttons"]
margin_right = 267.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )

[node name="music_btn" type="TextureButton" parent="Buttons"]
margin_top = 74.0
margin_right = 267.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )

[node name="vibration_btn" type="TextureButton" parent="Buttons"]
margin_top = 148.0
margin_right = 267.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="Buttons"]
margin_top = 222.0
margin_right = 267.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="close_btn" type="TextureButton" parent="Buttons/CenterContainer"]
margin_left = 82.0
margin_right = 184.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 94.0
margin_top = 474.0
margin_right = 202.0
margin_bottom = 544.0

[connection signal="button_down" from="Buttons/sound_btn" to="." method="_on_sound_btn_button_down"]
[connection signal="toggled" from="Buttons/sound_btn" to="." method="_on_sound_btn_toggled"]
[connection signal="button_down" from="Buttons/music_btn" to="." method="_on_music_btn_button_down"]
[connection signal="toggled" from="Buttons/music_btn" to="." method="_on_music_btn_toggled"]
[connection signal="button_down" from="Buttons/vibration_btn" to="." method="_on_vibration_btn_button_down"]
[connection signal="toggled" from="Buttons/vibration_btn" to="." method="_on_vibration_btn_toggled"]
[connection signal="button_down" from="Buttons/CenterContainer/close_btn" to="." method="_on_close_btn_button_down"]
[connection signal="pressed" from="Buttons/CenterContainer/close_btn" to="." method="_on_close_btn_pressed"]
